# novac

./: .gitignore  CMakeLists.txt  README.md  example.js  example.nv  set.ps1  temp
.github/workflows/: build.yml
examples/core/: 01_hello_world.nv  02_variables.nv  03_types.nv  04_strings.nv  05_operators.nv  06_control_flow.nv  07_loops.nv  08_functions.nv  09_recursion.nv  10_arrays.nv  11_objects.nv  12_classes.nv  13_error_handling.nv  14_meta_vars.nv  15_fstrings_escapes.nv  16_structs.nv  17_enums.nv  18_types_interfaces.nv  19_async.nv  20_match.nv  21_namespaces.nv  22_events.nv  23_generators.nv  24_pointers.nv  25_smart_vars.nv  26_higher_order.nv  27_rc_system.nv  28_preprocessor.nv  29_algebraic_effects.nv
examples/modules/: mock.nv  path.nv  slugify.nv
examples/programs/: BASIC.nv  ROT13.nv  actor.nv  brainfuck.nv  maze.nv  sh.nv  win.dlldbg.nv  zoom.nv
src/cli/: cli.cpp  cli.h  cli_dump.cpp  cli_misc.cpp  port.cpp  port.h
src/error/: novac_error.h
src/lex/: lexer.cpp  lexer.h  token.h
src/parse/: ast.h  parser.cpp  parser.h
src/runtime/: bstd.cpp  bstd.h  fetch.cpp  fetch.h  fiber.h  scope.cpp  scope.h  socket.h  type_registry.cpp  type_registry.h  utf8.h  value.h
src/vm/: vm.cpp  vm.h
